k8s/capsule-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: ghcr.io/kerenstoller/gymglow-backend:1.0
      ports:
        - containerPort: 8000
