k8s/capsule-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    app: db
spec:
  containers:
    - name: db
      image: postgres:15-alpine
      ports:
        - containerPort: 5432
