k8s/capsule-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: ghcr.io/kerenstoller/gymglow-frontend:1.0
      ports:
        - containerPort: 80
